language/move-lang/tests/move_check/typing/constant_invalid_usage.exp
error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:11:20 ───
    │
 11 │     fun t1(): u8 { C6 }
    │                    ^^ Invalid return expression
    ·
  8 │     const C6: vector<u8> = x"0123";
    │               ---------- The type: 'vector<u8>'
    ·
 11 │     fun t1(): u8 { C6 }
    │               -- Is not compatible with: 'u8'
    │

error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:12:21 ───
    │
 12 │     fun t2(): u64 { C7 }
    │                     ^^ Invalid return expression
    ·
  9 │     const C7: vector<u8> = b"abcd";
    │               ---------- The type: 'vector<u8>'
    ·
 12 │     fun t2(): u64 { C7 }
    │               --- Is not compatible with: 'u64'
    │

error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:13:22 ───
    │
 13 │     fun t3(): u128 { C1 }
    │                      ^^ Invalid return expression
    ·
  3 │     const C1: u8 = 0;
    │               -- The type: 'u8'
    ·
 13 │     fun t3(): u128 { C1 }
    │               ---- Is not compatible with: 'u128'
    │

error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:14:22 ───
    │
 14 │     fun t4(): bool { C2 }
    │                      ^^ Invalid return expression
    ·
  4 │     const C2: u64 = 0;
    │               --- The type: 'u64'
    ·
 14 │     fun t4(): bool { C2 }
    │               ---- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:15:25 ───
    │
 15 │     fun t5(): address { C3 }
    │                         ^^ Invalid return expression
    ·
  5 │     const C3: u128 = 0;
    │               ---- The type: 'u128'
    ·
 15 │     fun t5(): address { C3 }
    │               ------- Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:16:28 ───
    │
 16 │     fun t6(): vector<u8> { C4 }
    │                            ^^ Invalid return expression
    ·
  6 │     const C4: bool = false;
    │               ---- The type: 'bool'
    ·
 16 │     fun t6(): vector<u8> { C4 }
    │               ---------- Is not compatible with: 'vector<u8>'
    │

error: 

    ┌── tests/move_check/typing/constant_invalid_usage.move:17:28 ───
    │
 17 │     fun t7(): vector<u8> { C5 }
    │                            ^^ Invalid return expression
    ·
  7 │     const C5: address = 0x0;
    │               ------- The type: 'address'
    ·
 17 │     fun t7(): vector<u8> { C5 }
    │               ---------- Is not compatible with: 'vector<u8>'
    │

